feat: 통화쌍 환율 조회 API 구현